--- a/package.json
+++ b/package.json
@@ -31,5 +31,9 @@
   },
   "volta": {
     "node": "18.18.0"
+  },
+  "resolutions": {
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2"
   }
 }
