--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "node": "18.18.0"
   },
   "resolutions": {
-    "@types/react": "17.0.2",
+    "@types/react": "^18.0.0",
     "@types/react-dom": "17.0.2"
   }
 }
