--- a/package.json
+++ b/package.json
@@ -35,5 +35,6 @@
   "resolutions": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "17.0.2"
-  }
+  },
+  "preinstall": "npm install --package-lock-only --ignore-scripts && npx npm-force-resolutions"
 }
