--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "react-countup": "^6.4.2",
     "react-dom": "latest",
     "react-parallax": "^3.5.1",
+    "react-scroll": "^1.8.9",
     "react-scroll-trigger": "^0.6.14"
   },
   "devDependencies": {
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
+    "@types/react-scroll": "^1.8.8",
     "autoprefixer": "latest",
     "eslint": "latest",
     "eslint-config-next": "latest",
