--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next/font": "^13.5.3",
     "@react-spring/parallax": "^9.7.3",
     "bootstrap": "^5.3.2",
+    "framer-motion": "^10.16.4",
     "next": "latest",
     "node": "^20.7.0",
     "react": "latest",
