--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.2",
     "framer-motion": "^10.16.4",
     "next": "latest",
+    "next-auth": "^4.23.2",
     "node": "^20.7.0",
     "react": "latest",
     "react-countup": "^6.4.2",
