fixed auth bugs

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 GOOGLE_CLIENT_ID = "955599805999-ppo2e1ogdi5j7v875magva9g6f8fhj6k.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET = "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"
-NEXT_AUTH_SECRET = "13eJKL2ejoiklaOIJWAE2-DOJN-xojN"
+NEXTAUTH_SECRET = "13eJKL2ejoiklaOIJWAE2-DOJN-xojN"
