--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^2.0.18",
     "@next/font": "^13.5.3",
+    "@react-icons/all-files": "^4.1.0",
     "@react-spring/parallax": "^9.7.3",
     "bootstrap": "^5.3.2",
     "firebase": "^10.5.0",
@@ -22,6 +26,7 @@
     "react": "latest",
     "react-countup": "^6.4.2",
     "react-dom": "latest",
+    "react-icons": "^4.11.0",
     "react-parallax": "^3.5.1",
     "react-scroll": "^1.8.9",
     "react-scroll-trigger": "^0.6.14"
