--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-spring/parallax": "^9.7.3",
     "bootstrap": "^5.3.2",
     "firebase": "^10.5.0",
+    "fortawesome": "^0.0.1-security",
     "framer-motion": "^10.16.4",
     "next": "latest",
     "next-auth": "^4.23.2",
