--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@next/font": "^13.5.3",
     "@react-icons/all-files": "^4.1.0",
     "@react-spring/parallax": "^9.7.3",
+    "@stripe/stripe-js": "^2.1.10",
+    "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "firebase": "^10.5.0",
     "fortawesome": "^0.0.1-security",
@@ -30,7 +32,8 @@
     "react-icons": "^4.11.0",
     "react-parallax": "^3.5.1",
     "react-scroll": "^1.8.9",
-    "react-scroll-trigger": "^0.6.14"
+    "react-scroll-trigger": "^0.6.14",
+    "stripe": "^14.1.0"
   },
   "devDependencies": {
     "@types/node": "latest",
