--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@next/font": "^13.5.3",
     "@react-icons/all-files": "^4.1.0",
     "@react-spring/parallax": "^9.7.3",
+    "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "firebase": "^10.5.0",
     "fortawesome": "^0.0.1-security",
     "framer-motion": "^10.16.4",
+    "multer": "^1.4.5-lts.1",
     "next": "latest",
     "next-auth": "^4.23.2",
     "node": "^20.7.0",
