--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "fortawesome": "^0.0.1-security",
     "framer-motion": "^10.16.4",
     "multer": "^1.4.5-lts.1",
-    "next": "latest",
+    "next": "^14.0.0",
     "next-auth": "^4.23.2",
     "node": "^20.7.0",
     "openssl": "^2.0.0",
-    "react": "latest",
+    "react": "^18.2.0",
     "react-countup": "^6.4.2",
-    "react-dom": "latest",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-parallax": "^3.5.1",
     "react-scroll": "^1.8.9",
