--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "fortawesome": "^0.0.1-security",
     "framer-motion": "^10.16.4",
     "multer": "^1.4.5-lts.1",
-    "next": "latest",
+    "next": "^14.0.1",
     "next-auth": "^4.23.2",
     "node": "^20.7.0",
     "openssl": "^2.0.0",
